message Generation {
  enum Status {
    OPENED = 1;
    CLOSED = 2;
  }

  required uint64 id = 1;
  required Status status = 2;
  required uint64 date_started_ts = 3;
  required uint64 date_ended_ts = 4;
}

message ScreenConfig {
  required uint64 id = 1;
  required string name = 2;
  required uint32 width = 3;
}

message ArtifactSource {
  required uint64 id = 1;
  required string name = 2;
  required string start_page_url = 3;
  required uint64 date_added_ts = 4;
}

message Artifact {
  required uint64 id = 1;
  required string page_url = 2;
  optional string title = 3;
  repeated PhotoDescription photo_descriptions = 4;
}

message PhotoDescription {
  optional string subtitle = 1;
  optional string description = 2;
  required string source_uri = 3;
  required string original_uri_path = 4;
  // Can have one or the other of these fields, but not both.
  repeated ImagePhotoData image_data = 5;
  repeated VideoPhotoData video_data = 6;
}

message ImagePhotoData {
  required TileData full_image_desc = 1;
  repeated TileData tiles_desc = 2;
  required uint64 screen_config_fk = 3;
}

message VideoPhotoData {
  required TileData first_frame_desc = 1;
  required TileData video_desc = 2;
  required uint32 time_between_frames_ms = 3;
  required uint32 framerate = 4;
  required uint64 screen_config_fk = 5;
}

message TileData {
  required uint32 width = 1;
  required uint32 height = 2;
  required string uri_path = 3;
}

message NextGenResponse {
  required Generation generation = 1;
  repeated ScreenConfig screen_configs = 2;
  repeated ArtifactSource artifact_sources = 3;
  repeated Artifact artifacts = 4;
}
